# pythonappdep1

./: main.py  pyproject.toml  requirements.txt
client/: package-lock.json  package.json
client/src/: App.css  App.js  index.js
client/src/components/: Dashboard.js  EditProfile.js  Login.js  Signup.js  TopNavigation.js
